--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -22,6 +22,7 @@ permissions:
       class.leave: true
       class.end: true
       class.raisehand: true
+      class.book: true
   class.default:
     description: Admin Commands
     children:
